🚨fixed revive linter errors

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -131,6 +131,9 @@ linters:
       tab-width: 1
 
     gocritic:
+      disabled-checks:
+        - unnamedResult
+
       enabled-tags:
         - diagnostic
         - experimental
