📝contributing and code of conduct update

--- a/docs/mkdocs.yaml
+++ b/docs/mkdocs.yaml
@@ -88,6 +88,7 @@ markdown_extensions:
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.tilde
+  - sane_lists
 
 plugins:
   - search:
