--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,12 @@ insert_final_newline = true
 [*.{yml,yaml,toml,html,css,scss,json,ts,tsx}]
 indent_size = 2
 
+[.prettierrc]
+indent_size = 2
+
+[*.md]
+indent_size = 2
+
 [Makefile]
 indent_style = tab
 indent_size = 4
