--- a/.prettierrc
+++ b/.prettierrc
@@ -1,18 +1,17 @@
 {
-    "overrides": [
-        {
-          "files": "*.yaml",
-          "options": {
-            "singleQuote": false,
-            "bracketSpacing": false
-          }
-        },
-        {
-            "files": "*.md",
-            "options": {
-                "proseWrap": "always",
-                "tabWidth": 2
-            }
-        }
-      ]
+  "overrides": [
+    {
+      "files": "*.yaml",
+      "options": {
+        "singleQuote": false,
+        "bracketSpacing": false
+      }
+    },
+    {
+      "files": "*.md",
+      "options": {
+        "proseWrap": "always"
+      }
+    }
+  ]
 }
