🩹build: use downloaded krmfnbuiltlin

--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -60,14 +60,6 @@ jobs:
           (cd packages/$(uname -m)/ && \
            sha256sum *.apk >>../../dist/SHA256SUMS && \
            for f in *.apk; do mv $f ../../dist/$(echo $f | sed 's/\-r0.apk$//').$(uname -m).apk; done)
-      - name: Upload assets
-        uses: actions/upload-artifact@v4
-        with:
-          name: packages
-          path: |
-            dist/*.apk
-            dist/metadata.json
-            dist/SHA256SUMS
       - name: Download krmfnbuiltin apk
         run: |
           cd dist
@@ -76,6 +68,14 @@ jobs:
           curl -O -L "https://github.com/kaweezle/krmfnbuiltin/releases/download/${LATEST_VERSION}/krmfnbuiltin-${LATEST_VERSION#v}.x86_64.apk"
           curl -O -L "https://github.com/kaweezle/krmfnbuiltin/releases/download/${LATEST_VERSION}/krmfnbuiltin-${LATEST_VERSION#v}.i386.apk"
           cd ..
+      - name: Upload assets
+        uses: actions/upload-artifact@v4
+        with:
+          name: packages
+          path: |
+            dist/*.apk
+            dist/metadata.json
+            dist/SHA256SUMS
       - name: Build APK repo
         uses: ./.github/actions/make-apkindex
         with:
@@ -147,7 +147,8 @@ jobs:
           export IKNITE_VERSION=$(jq -Mr ".version" packages/metadata.json)
           export IKNITE_LAST_TAG=$(jq -Mr ".tag" packages/metadata.json)
           echo "Version is $IKNITE_VERSION"
-          cp packages/iknite-${IKNITE_VERSION}.x86_64.apk rootfs
+          cp packages/iknite-${IKNITE_VERSION}.$(uname -m).apk rootfs
+          cp packages/krmfnbuiltin-*.$(uname -m).apk rootfs/
           mkdir -p /tmp/.buildx-cache
           mkdir -p /tmp/.buildx-cache-new
           echo "::group::Building iknite-rootfs-base:${IKNITE_VERSION}"
