--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -37,7 +37,9 @@
     "DrBlury.protobuf-vsc",
     "HashiCorp.terraform",
     "HashiCorp.HCL",
-    "fredwangwang.vscode-hcl-format"
+    "fredwangwang.vscode-hcl-format",
+    "bmalehorn.shell-syntax",
+    "timonwong.shellcheck"
   ],
   // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
   "unwantedRecommendations": []
