--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -85,6 +85,42 @@ repos:
     hooks:
       - id: shellcheck
         args: ["--exclude=SC3014,SC3043"] # Ignore source-related warnings
+        exclude: |
+          (?x)^(
+              rootfs/p10k.zsh
+          )$
+
+  - repo: https://github.com/antonbabenko/pre-commit-terraform
+    rev: v1.105.0
+    hooks:
+      - id: terraform_fmt
+      - id: terraform_docs
+        args:
+          - --args=--hide providers
+      # - id: terraform_trivy
+      # - id: terraform_validate
+      #   args:
+      #     - --args=-json
+      #     - --args=-no-color
+      - id: terraform_tflint
+      - id: terragrunt_validate_inputs
+        args:
+          - --hook-config=--parallelism-ci-cpu-cores=1
+          - --hook-config=--parallelism-limit=1
+        files: |
+          (?x)^(
+              support/iac/iknite/.*/terragrunt\.hcl
+          )$
+        exclude: \.terraform/.*$
+      - id: terragrunt_validate
+        args:
+          - --hook-config=--parallelism-ci-cpu-cores=1
+          - --hook-config=--parallelism-limit=1
+        files: |
+          (?x)^(
+              support/iac/iknite/.*/terragrunt\.hcl
+          )$
+        exclude: \.terraform/.*$
 
 # Global exclusions for all hooks
 exclude: |
