--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -9,7 +9,6 @@ env:
   tf_version: "1.14.3"
   tg_version: "0.97.2"
   REGISTRY: ghcr.io
-  KUBERNETES_VERSION: "1.34.3"
   IMAGE_NAME: ${{ github.repository_owner }}/iknite
 
 jobs:
@@ -17,6 +16,10 @@ jobs:
     name: Test GoReleaser packaging
     runs-on: ubuntu-latest
     if: ${{ github.actor != 'dependabot[bot]' }}
+    outputs:
+      KUBERNETES_VERSION: ${{ steps.import-signing-key.outputs.KUBERNETES_VERSION }}
+      IKNITE_VERSION: ${{ steps.get-iknite-version.outputs.IKNITE_VERSION }}
+      IKNITE_LAST_TAG: ${{ steps.get-iknite-version.outputs.IKNITE_LAST_TAG }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -27,6 +30,7 @@ jobs:
         with:
           go-version: ^1
       - name: Import Signature key
+        id: import-signing-key
         shell: bash
         run: |
           echo -e "$GPG_PRIVATE_KEY" > kaweezle-devel@kaweezle.com-c9d89864.rsa
@@ -37,29 +41,51 @@ jobs:
           mkdir -p ~/.config/sops/age
           echo -e "$AGE_PRIVATE_KEY" > ~/.config/sops/age/keys.txt
           chmod 600 ~/.config/sops/age/keys.txt
+          KUBERNETES_VERSION=$(grep k8s.io/kubernetes go.mod | awk '{gsub(/^v/,"",$2);print $2;}')
+          echo "Using Kubernetes version $KUBERNETES_VERSION"
+          echo "KUBERNETES_VERSION=$KUBERNETES_VERSION" >> $GITHUB_ENV
+          echo "KUBERNETES_VERSION=$KUBERNETES_VERSION" >> $GITHUB_OUTPUT
         env:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
           AGE_PRIVATE_KEY: ${{ secrets.AGE_PRIVATE_KEY }}
-      - name: Run GoReleaser Tests
+      - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
         with:
           version: "~> v2"
           args: --snapshot --skip=publish --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Get iknite version
+        id: get-iknite-version
+        run: |
+          IKNITE_VERSION=$(jq -Mr ".version" dist/metadata.json)
+          IKNITE_LAST_TAG=$(jq -Mr ".tag" dist/metadata.json)
+          echo "IKNITE_VERSION=$IKNITE_VERSION" >> $GITHUB_ENV
+          echo "IKNITE_VERSION=$IKNITE_VERSION" >> $GITHUB_OUTPUT
+          echo "IKNITE_LAST_TAG=$IKNITE_LAST_TAG" >> $GITHUB_ENV
+          echo "IKNITE_LAST_TAG=$IKNITE_LAST_TAG" >> $GITHUB_OUTPUT
       - name: Build iknite images APK
         run: |
+          echo "KUBERNETES_VERSION: ${KUBERNETES_VERSION}" > support/apk/.env
+          mkdir -p support/apk/iknite-images
+          ./dist/iknite_linux_amd64_v1/iknite kustomize  -d apk/iknite.d print  | grep image: | awk '{ print $2; }' > support/apk/iknite-images/image-list.txt
+          ./dist/iknite_linux_amd64_v1/iknite info images >> support/apk/iknite-images/image-list.txt
+          sort -u support/apk/iknite-images/image-list.txt -o support/apk/iknite-images/image-list.txt
+
           docker run --rm --privileged \
             -v /var/run/docker.sock:/var/run/docker.sock \
             -v $(pwd):/work \
             cgr.dev/chainguard/melange build support/apk/iknite-images.yaml \
             --arch $(uname -m) \
             --signing-key kaweezle-devel@kaweezle.com-c9d89864.rsa \
+            --vars-file support/apk/.env \
+            --source-dir support/apk/iknite-images \
+            --out-dir ./dist/ \
             --generate-index=false
-          sudo chown -R $(id -u):$(id -g) packages
-          (cd packages/$(uname -m)/ && \
-           sha256sum *.apk >>../../dist/SHA256SUMS && \
-           for f in *.apk; do mv $f ../../dist/$(echo $f | sed 's/\-r0.apk$//').$(uname -m).apk; done)
+          sudo chown -R $(id -u):$(id -g) dist
+          (cd dist/$(uname -m)/ && \
+           sha256sum *.apk >>../SHA256SUMS && \
+           for f in *.apk; do mv $f ../$(echo $f | sed 's/\-r0.apk$//').$(uname -m).apk; done)
       - name: Download krmfnbuiltin apk
         run: |
           cd dist
@@ -86,9 +112,9 @@ jobs:
       - name: Upload APK repo
         run: |
           echo "::group::Instaling tenv"
-          LATEST_VERSION=$(curl --silent https://api.github.com/repos/tofuutils/tenv/releases/latest | jq -r .tag_name)
-          curl -O -L "https://github.com/tofuutils/tenv/releases/latest/download/tenv_${LATEST_VERSION}_amd64.deb"
-          sudo dpkg -i "tenv_${LATEST_VERSION}_amd64.deb"
+          TENV_LATEST_VERSION=$(curl --silent https://api.github.com/repos/tofuutils/tenv/releases/latest | jq -r .tag_name)
+          curl -O -L "https://github.com/tofuutils/tenv/releases/latest/download/tenv_${TENV_LATEST_VERSION}_amd64.deb"
+          sudo dpkg -i "tenv_${TENV_LATEST_VERSION}_amd64.deb"
           echo "::endgroup::"
 
           echo "::group::Installing terraform ($tf_version) and terragrunt ($tg_version)"
@@ -108,6 +134,10 @@ jobs:
     name: Build Root Filesystem for WSL
     needs: [goreleaser-snapshot]
     runs-on: ubuntu-latest
+    env:
+      KUBERNETES_VERSION: ${{ needs.goreleaser-snapshot.outputs.KUBERNETES_VERSION }}
+      IKNITE_VERSION: ${{ needs.goreleaser-snapshot.outputs.IKNITE_VERSION }}
+      IKNITE_LAST_TAG: ${{ needs.goreleaser-snapshot.outputs.IKNITE_LAST_TAG }}
     permissions:
       contents: read
       packages: write
@@ -147,8 +177,6 @@ jobs:
           sudo apt-get update -y
           sudo apt-get install -y --no-install-recommends libarchive-tools
 
-          export IKNITE_VERSION=$(jq -Mr ".version" packages/metadata.json)
-          export IKNITE_LAST_TAG=$(jq -Mr ".tag" packages/metadata.json)
           echo "Version is $IKNITE_VERSION"
           cp packages/iknite-${IKNITE_VERSION}.$(uname -m).apk rootfs
           cp packages/krmfnbuiltin-*.$(uname -m).apk rootfs/
@@ -159,6 +187,7 @@ jobs:
              --build-arg IKNITE_REPO_URL=https://static.iknite.app/test/ \
              --build-arg IKNITE_VERSION=$IKNITE_VERSION \
              --build-arg IKNITE_LAST_TAG=$IKNITE_LAST_TAG \
+             --build-arg KUBERNETES_VERSION=${KUBERNETES_VERSION} \
              --cache-from type=local,src=/tmp/.buildx-cache \
              --cache-to type=local,dest=/tmp/.buildx-cache-new \
              --tag iknite-rootfs-base:${IKNITE_VERSION} \
@@ -203,11 +232,15 @@ jobs:
 
   build-vm-images:
     name: Build VM images
-    needs: [build-rootfs]
+    needs: [build-rootfs, goreleaser-snapshot]
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
+    env:
+      KUBERNETES_VERSION: ${{ needs.goreleaser-snapshot.outputs.KUBERNETES_VERSION }}
+      IKNITE_VERSION: ${{ needs.goreleaser-snapshot.outputs.IKNITE_VERSION }}
+      IKNITE_LAST_TAG: ${{ needs.goreleaser-snapshot.outputs.IKNITE_LAST_TAG }}
     steps:
       - uses: actions/checkout@v4
 
@@ -246,9 +279,9 @@ jobs:
           echo "::endgroup::"
 
           echo "::group::Instaling tenv"
-          LATEST_VERSION=$(curl --silent https://api.github.com/repos/tofuutils/tenv/releases/latest | jq -r .tag_name)
-          curl -O -L "https://github.com/tofuutils/tenv/releases/latest/download/tenv_${LATEST_VERSION}_amd64.deb"
-          sudo dpkg -i "tenv_${LATEST_VERSION}_amd64.deb"
+          TENV_LATEST_VERSION=$(curl --silent https://api.github.com/repos/tofuutils/tenv/releases/latest | jq -r .tag_name)
+          curl -O -L "https://github.com/tofuutils/tenv/releases/latest/download/tenv_${TENV_LATEST_VERSION}_amd64.deb"
+          sudo dpkg -i "tenv_${TENV_LATEST_VERSION}_amd64.deb"
           echo "::endgroup::"
 
           echo "::group::Installing terraform ($tf_version) and terragrunt ($tg_version)"
@@ -259,11 +292,6 @@ jobs:
           echo "::group::Running terragrunt module with instance creation"
           export TF_PLUGIN_CACHE_DIR="$HOME/.cache/terraform/plugin-cache"
           mkdir -p $TF_PLUGIN_CACHE_DIR
-          echo "Qcow2 and VHDX images stats and sha256sums:"
-          stat rootfs/iknite-*.qcow2
-          stat rootfs/iknite-*.vhdx
-          sha512sum rootfs/iknite-*.qcow2
-          sha512sum rootfs/iknite-*.vhdx
           cd support/iac/iknite/iknite-vm
           export IKNITE_CREATE_INSTANCE=true
           terragrunt init
