--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ kaweezle-devel@kaweezle.com-c9d89864.rsa.pub
 
 .vscode/*.log
 .venv/
+.env
 
 /iknite
 packages/
@@ -39,3 +40,4 @@ rootfs/*.apk
 *.vhdx
 *.iso
 *.log
+support/apk/iknite-images/*
