--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -3,7 +3,7 @@
 # Make sure to check the documentation at https://goreleaser.com
 version: 2
 env:
-  - KUBERNETES_VERSION=1.34.3
+  - KUBERNETES_VERSION={{ if index .Env "KUBERNETES_VERSION"  }}{{ .Env.KUBERNETES_VERSION }}{{ else }}1.34.3{{ end }}
 before:
   hooks:
     - go mod tidy
@@ -22,7 +22,7 @@ builds:
     ldflags:
       - -s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X
         main.date={{ .CommitDate }} -X main.builtBy=pterm -X
-        k8s.KubernetesVersion={{ .Env.KUBERNETES_VERSION }}
+        github.com/kaweezle/iknite/pkg/apis/iknite/v1alpha1.KubernetesVersionDefault={{ .Env.KUBERNETES_VERSION }}
     binary: iknite
     id: iknite
 archives:
