--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,14 +1,27 @@
 # cSpell: disable
-name: Make release with GoReleaser
+name: Buid iknite package, rootfs, and VM images
 
 on:
+  pull_request:
+    branches: ["main"]
   push:
     tags: ["v*"]
 
+env:
+  tf_version: "1.14.3"
+  tg_version: "0.97.2"
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository_owner }}/iknite
+
 jobs:
-  goreleaser:
-    name: Release iknite package
+  goreleaser-snapshot:
+    name: Test GoReleaser packaging
     runs-on: ubuntu-latest
+    if: ${{ github.actor != 'dependabot[bot]' }}
+    outputs:
+      KUBERNETES_VERSION: ${{ steps.import-signing-key.outputs.KUBERNETES_VERSION }}
+      IKNITE_VERSION: ${{ steps.get-iknite-version.outputs.IKNITE_VERSION }}
+      IKNITE_LAST_TAG: ${{ steps.get-iknite-version.outputs.IKNITE_LAST_TAG }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -19,32 +32,70 @@ jobs:
         with:
           go-version: ^1
       - name: Import Signature key
+        id: import-signing-key
         shell: bash
         run: |
           echo -e "$GPG_PRIVATE_KEY" > kaweezle-devel@kaweezle.com-c9d89864.rsa
+          chmod 600 kaweezle-devel@kaweezle.com-c9d89864.rsa
           openssl rsa -in kaweezle-devel@kaweezle.com-c9d89864.rsa -pubout -out kaweezle-devel@kaweezle.com-c9d89864.rsa.pub
+          mkdir -p ~/.ssh && chmod 700 ~/.ssh
+          cp kaweezle-devel@kaweezle.com-c9d89864.rsa ~/.ssh/id_rsa
+          mkdir -p ~/.config/sops/age
+          echo -e "$AGE_PRIVATE_KEY" > ~/.config/sops/age/keys.txt
+          chmod 600 ~/.config/sops/age/keys.txt
+          KUBERNETES_VERSION=$(grep k8s.io/kubernetes go.mod | awk '{gsub(/^v/,"",$2);print $2;}')
+          echo "Using Kubernetes version $KUBERNETES_VERSION"
+          echo "KUBERNETES_VERSION=$KUBERNETES_VERSION" >> $GITHUB_ENV
+          echo "KUBERNETES_VERSION=$KUBERNETES_VERSION" >> $GITHUB_OUTPUT
         env:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+          AGE_PRIVATE_KEY: ${{ secrets.AGE_PRIVATE_KEY }}
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
         with:
           version: "~> v2"
-          args: release --clean
+          args: --snapshot --skip=publish --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Get iknite version
+        id: get-iknite-version
+        run: |
+          IKNITE_VERSION=$(jq -Mr ".version" dist/metadata.json)
+          IKNITE_LAST_TAG=$(jq -Mr ".tag" dist/metadata.json)
+          echo "IKNITE_VERSION=$IKNITE_VERSION" >> $GITHUB_ENV
+          echo "IKNITE_VERSION=$IKNITE_VERSION" >> $GITHUB_OUTPUT
+          echo "IKNITE_LAST_TAG=$IKNITE_LAST_TAG" >> $GITHUB_ENV
+          echo "IKNITE_LAST_TAG=$IKNITE_LAST_TAG" >> $GITHUB_OUTPUT
       - name: Build iknite images APK
         run: |
+          echo "KUBERNETES_VERSION: ${KUBERNETES_VERSION}" > support/apk/.env
+          mkdir -p support/apk/iknite-images
+          ./dist/iknite_linux_amd64_v1/iknite kustomize  -d apk/iknite.d print  | grep image: | awk '{ print $2; }' > support/apk/iknite-images/image-list.txt
+          ./dist/iknite_linux_amd64_v1/iknite info images >> support/apk/iknite-images/image-list.txt
+          sort -u support/apk/iknite-images/image-list.txt -o support/apk/iknite-images/image-list.txt
+
           docker run --rm --privileged \
             -v /var/run/docker.sock:/var/run/docker.sock \
             -v $(pwd):/work \
             cgr.dev/chainguard/melange build support/apk/iknite-images.yaml \
             --arch $(uname -m) \
             --signing-key kaweezle-devel@kaweezle.com-c9d89864.rsa \
+            --vars-file support/apk/.env \
+            --source-dir support/apk/iknite-images \
+            --out-dir ./dist/ \
             --generate-index=false
-          sudo chown -R $(id -u):$(id -g) packages
-          (cd packages/$(uname -m)/ && \
-           sha256sum *.apk >>../../dist/SHA256SUMS && \
-           for f in *.apk; do mv $f ../../dist/$(echo $f | sed 's/\-r0.apk$//').$(uname -m).apk; done)
+          sudo chown -R $(id -u):$(id -g) dist
+          (cd dist/$(uname -m)/ && \
+           sha256sum *.apk >>../SHA256SUMS && \
+           for f in *.apk; do mv $f ../$(echo $f | sed 's/\-r0.apk$//').$(uname -m).apk; done)
+      - name: Download krmfnbuiltin apk
+        run: |
+          cd dist
+          LATEST_VERSION=$(curl --silent  https://api.github.com/repos/kaweezle/krmfnbuiltin/releases/latest | jq -r .tag_name)
+          echo "Latest krmfnbuiltin version is ${LATEST_VERSION}"
+          curl -O -L "https://github.com/kaweezle/krmfnbuiltin/releases/download/${LATEST_VERSION}/krmfnbuiltin-${LATEST_VERSION#v}.x86_64.apk"
+          curl -O -L "https://github.com/kaweezle/krmfnbuiltin/releases/download/${LATEST_VERSION}/krmfnbuiltin-${LATEST_VERSION#v}.i386.apk"
+          cd ..
       - name: Upload assets
         uses: actions/upload-artifact@v4
         with:
@@ -53,20 +104,47 @@ jobs:
             dist/*.apk
             dist/metadata.json
             dist/SHA256SUMS
-      - name: Trigger APK repo build
-        uses: peter-evans/repository-dispatch@v1
+      - name: Build APK repo
+        uses: ./.github/actions/make-apkindex
         with:
-          token: ${{ secrets.ROOTFS_ACCESS_TOKEN }}
-          repository: kaweezle/kaweezle.github.io
-          event-type: iknite-release
-          client-payload: >-
-            {"version": "${{ github.ref_name }}", "ref": "${{ github.ref }}",
-            "sha": "${{ github.sha }}"}
+          apk_files: dist/*.apk
+          signature_key: "${{ secrets.GPG_PRIVATE_KEY }}"
+          signature_key_name: kaweezle-devel@kaweezle.com-c9d89864.rsa
+          destination: dist/repo
+      - name: Upload APK repo
+        env:
+          IKNITE_APKREPO_DESTINATION_PREFIX: ${{ (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')) && 'release/' || 'test/' }}
+        run: |
+          echo "::group::Instaling tenv"
+          TENV_LATEST_VERSION=$(curl --silent https://api.github.com/repos/tofuutils/tenv/releases/latest | jq -r .tag_name)
+          curl -O -L "https://github.com/tofuutils/tenv/releases/latest/download/tenv_${TENV_LATEST_VERSION}_amd64.deb"
+          sudo dpkg -i "tenv_${TENV_LATEST_VERSION}_amd64.deb"
+          echo "::endgroup::"
+
+          echo "::group::Installing terraform ($tf_version) and terragrunt ($tg_version)"
+          tenv tf install $tf_version
+          tenv tg install $tg_version
+          echo "::endgroup::"
+
+          echo "::group::Running terragrunt module"
+          export TF_PLUGIN_CACHE_DIR="$HOME/.cache/terraform/plugin-cache"
+          mkdir -p $TF_PLUGIN_CACHE_DIR
+          cd support/iac/iknite/testrepo
+          terragrunt init
+          terragrunt apply -auto-approve
+          echo "::endgroup::"
 
   build-rootfs:
     name: Build Root Filesystem for WSL
-    needs: [goreleaser]
+    needs: [goreleaser-snapshot]
     runs-on: ubuntu-latest
+    env:
+      KUBERNETES_VERSION: ${{ needs.goreleaser-snapshot.outputs.KUBERNETES_VERSION }}
+      IKNITE_VERSION: ${{ needs.goreleaser-snapshot.outputs.IKNITE_VERSION }}
+      IKNITE_LAST_TAG: ${{ needs.goreleaser-snapshot.outputs.IKNITE_LAST_TAG }}
+    permissions:
+      contents: read
+      packages: write
     steps:
       - uses: actions/checkout@v4
 
@@ -76,6 +154,13 @@ jobs:
           driver-opts: |
             image=moby/buildkit:master
           buildkitd-flags: "--allow-insecure-entitlement security.insecure"
+
+      - name: Log in to Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Cache Docker layers
         uses: actions/cache@v4
@@ -93,28 +178,55 @@ jobs:
 
       - name: Build root fs
         run: |
-          export IKNITE_VERSION=$(jq -Mr ".version" packages/metadata.json)
-          export IKNITE_LAST_TAG=$(jq -Mr ".tag" packages/metadata.json)
+          sudo apt-get update -y
+          sudo apt-get install -y --no-install-recommends libarchive-tools
+
           echo "Version is $IKNITE_VERSION"
-          mv packages/iknite-${IKNITE_VERSION}.x86_64.apk packages/iknite-images-*.apk rootfs
-          cd rootfs
+          cp packages/iknite-${IKNITE_VERSION}.$(uname -m).apk rootfs
+          cp packages/krmfnbuiltin-*.$(uname -m).apk rootfs/
           mkdir -p /tmp/.buildx-cache
           mkdir -p /tmp/.buildx-cache-new
+          echo "::group::Building iknite-rootfs-base:${IKNITE_VERSION}"
           docker buildx build \
+             --build-arg IKNITE_REPO_URL=https://static.iknite.app/test/ \
              --build-arg IKNITE_VERSION=$IKNITE_VERSION \
              --build-arg IKNITE_LAST_TAG=$IKNITE_LAST_TAG \
-             --allow security.insecure \
+             --build-arg KUBERNETES_VERSION=${KUBERNETES_VERSION} \
              --cache-from type=local,src=/tmp/.buildx-cache \
              --cache-to type=local,dest=/tmp/.buildx-cache-new \
-             --output type=tar . | gzip >kaweezle.rootfs.tar.gz
-          sha256sum kaweezle.rootfs.tar.gz >> ../packages/SHA256SUMS
+             --tag iknite-rootfs-base:${IKNITE_VERSION} \
+             --load \
+             rootfs
+          echo "::endgroup::"
+
+          echo "::group::Adding base iknite images to root fs and exporting"
+          docker run \
+            --name iknite-rootfs \
+            --privileged \
+            -v $(pwd)/packages:/apks \
+            iknite-rootfs-base:${IKNITE_VERSION} \
+            /bin/sh -c 'apk --no-cache add /apks/iknite-images-*.apk; apk del iknite-images'
+
+          docker export iknite-rootfs | bsdtar -zcf rootfs/iknite.rootfs.tar.gz --exclude=.dockerenv --exclude=dev/console @-
+          sha256sum rootfs/iknite.rootfs.tar.gz >> packages/SHA256SUMS
+          echo "::endgroup::"
+
+          echo "::group::Building and pushing root fs image to registry"
+          docker buildx build \
+             --build-arg IKNITE_VERSION=$IKNITE_VERSION \
+             --build-arg KUBERNETES_VERSION=${KUBERNETES_VERSION} \
+             --tag ${REGISTRY}/${IMAGE_NAME}:${IKNITE_VERSION}-${KUBERNETES_VERSION} \
+             --push \
+             --file rootfs/Dockerfile.rootfs \
+             rootfs
+          echo "::endgroup::"
 
       - name: Upload root fs artifact
         uses: actions/upload-artifact@v4
         with:
           name: rootfs
           path: |
-            rootfs/kaweezle.rootfs.tar.gz
+            rootfs/iknite.rootfs.tar.gz
             packages/SHA256SUMS
 
       - name: Move cache
@@ -122,11 +234,135 @@ jobs:
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
-      - name: release
-        uses: softprops/action-gh-release@v1
+  build-vm-images:
+    name: Build VM images
+    needs: [build-rootfs, goreleaser-snapshot]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    env:
+      KUBERNETES_VERSION: ${{ needs.goreleaser-snapshot.outputs.KUBERNETES_VERSION }}
+      IKNITE_VERSION: ${{ needs.goreleaser-snapshot.outputs.IKNITE_VERSION }}
+      IKNITE_LAST_TAG: ${{ needs.goreleaser-snapshot.outputs.IKNITE_LAST_TAG }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Get packages artifact
+        uses: actions/download-artifact@v4
         with:
-          files: |
-            rootfs/kaweezle.rootfs.tar.gz
-            packages/SHA256SUMS
+          name: packages
+          path: dist
+
+      - name: Get root fs artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: rootfs
+
+      # What is needed: qemu-img qemu-nbd genisoimage
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y qemu-utils qemu-guest-agent genisoimage
+          ls -Rl rootfs/
+          ls -Rl dist/
+
+      - name: Build VM images
+        run: |
+          sudo ./hack/build-vm-image.sh
+
+      - name: Create OpenStack image and test VM deployment
+        id: create-and-test-openstack-image
+        # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+        if: github.event_name == 'pull_request'
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+          AGE_PRIVATE_KEY: ${{ secrets.AGE_PRIVATE_KEY }}
+        run: |
+          echo "::group::Import Age key"
+          mkdir -p ~/.config/sops/age
+          echo -e "$AGE_PRIVATE_KEY" > ~/.config/sops/age/keys.txt
+          chmod 600 ~/.config/sops/age/keys.txt
+          echo "::endgroup::"
+
+          echo "::group::Instaling tenv"
+          TENV_LATEST_VERSION=$(curl --silent https://api.github.com/repos/tofuutils/tenv/releases/latest | jq -r .tag_name)
+          curl -O -L "https://github.com/tofuutils/tenv/releases/latest/download/tenv_${TENV_LATEST_VERSION}_amd64.deb"
+          sudo dpkg -i "tenv_${TENV_LATEST_VERSION}_amd64.deb"
+          echo "::endgroup::"
+
+          echo "::group::Installing terraform ($tf_version) and terragrunt ($tg_version)"
+          tenv tf install $tf_version
+          tenv tg install $tg_version
+          echo "::endgroup::"
+
+          echo "::group::Running terragrunt module with instance creation"
+          export TF_PLUGIN_CACHE_DIR="$HOME/.cache/terraform/plugin-cache"
+          mkdir -p $TF_PLUGIN_CACHE_DIR
+          cd support/iac/iknite/iknite-vm
+          export IKNITE_CREATE_INSTANCE=true
+          terragrunt init
+          terragrunt apply -auto-approve
+          echo "::endgroup::"
+
+          echo "::group::Testing VM instance"
+          # Add commands to test the VM instance here
+          echo "Should test Kubernetes presence..."
+          echo "::endgroup::"
+
+          echo "::group::Teardown VM instance"
+          export IKNITE_CREATE_INSTANCE=false
+          terragrunt apply -auto-approve
+          echo "::endgroup::"
+
+      - name: Upload VM images
+        uses: actions/upload-artifact@v4
+        with:
+          name: vm-images
+          path: |
+            rootfs/iknite-*.vhdx
+            rootfs/iknite-*.qcow2
+            rootfs/*.iso
+
+  make-release:
+    name: Release iknite package
+    needs: [build-rootfs, goreleaser-snapshot, build-vm-images]
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+    env:
+      KUBERNETES_VERSION: ${{ needs.goreleaser-snapshot.outputs.KUBERNETES_VERSION }}
+      IKNITE_VERSION: ${{ needs.goreleaser-snapshot.outputs.IKNITE_VERSION }}
+      IKNITE_LAST_TAG: ${{ needs.goreleaser-snapshot.outputs.IKNITE_LAST_TAG }}
+    permissions:
+      contents: write
+      packages: write
+    steps:
+      - uses: actions/checkout@v4
+
+      # Import all the artifacts from previous jobs
+      - name: Get All artifacts
+        uses: actions/download-artifact@v7
+
+      - name: Prepare release files
+        run: |
+          ls -Rl
+          mkdir -p dist
+          mv packages/* dist/
+          mv rootfs/* dist/
+          mv vm-images/* dist/
+          mv dist/iknite.rootfs.tar.gz dist/iknite-${IKNITE_VERSION}-${KUBERNETES_VERSION}.rootfs.tar.gz
+          (cd dist && sha256sum *.vhdx *.qcow2 *.tar.gz *.apk > SHA256SUMS)
+
+      - name: Create the GitHub Release (draft)
+        uses: softprops/action-gh-release@v2
+        with:
+          draft: true
+          generate_release_notes: true
+          body_path: RELEASE.md
+          files: |
+            dist/*.apk
+            dist/*.rootfs.tar.gz
+            dist/*.vhdx
+            dist/*.qcow2
+            dist/SHA256SUMS
+            Get-Iknite.ps1
