--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,26 +73,31 @@ jobs:
           echo "IKNITE_VERSION=$IKNITE_VERSION" >> $GITHUB_OUTPUT
       - name: Build iknite images APK
         run: |
-          echo "KUBERNETES_VERSION: ${KUBERNETES_VERSION}" > support/apk/.env
-          mkdir -p support/apk/iknite-images
-          ./dist/iknite_linux_amd64_v1/iknite kustomize  -d apk/iknite.d print  | grep image: | awk '{ print $2; }' > support/apk/iknite-images/image-list.txt
-          ./dist/iknite_linux_amd64_v1/iknite info images >> support/apk/iknite-images/image-list.txt
-          sort -u support/apk/iknite-images/image-list.txt -o support/apk/iknite-images/image-list.txt
+          BUILD_DIR="build/apk/iknite-images"
+          ARCH=$(uname -m)
+          rm -rf "$BUILD_DIR" || /bin/true
+          mkdir -p "$BUILD_DIR"
+
+          echo "KUBERNETES_VERSION: ${KUBERNETES_VERSION}" > "$BUILD_DIR/.env"
+          ./dist/iknite_linux_amd64_v1/iknite kustomize  -d packaging/apk/iknite/iknite.d print | grep image: | awk '{ print $2; }' > "$BUILD_DIR/image-list.txt"
+          ./dist/iknite_linux_amd64_v1/iknite info images >> "$BUILD_DIR/image-list.txt"
+          sort -u "$BUILD_DIR/image-list.txt" -o "$BUILD_DIR/image-list.txt"
 
           docker run --rm --privileged \
             -v /var/run/docker.sock:/var/run/docker.sock \
             -v $(pwd):/work \
-            cgr.dev/chainguard/melange build support/apk/iknite-images.yaml \
-            --arch $(uname -m) \
+            cgr.dev/chainguard/melange build packaging/apk/iknite-images/iknite-images.yaml \
+            --arch "$ARCH" \
             --signing-key kaweezle-devel@kaweezle.com-c9d89864.rsa \
-            --vars-file support/apk/.env \
-            --source-dir support/apk/iknite-images \
+            --vars-file "$BUILD_DIR/.env" \
+            --source-dir "$BUILD_DIR" \
             --out-dir ./dist/ \
             --generate-index=false
           sudo chown -R $(id -u):$(id -g) dist
-          (cd dist/$(uname -m)/ && \
+          (cd "dist/$ARCH"/ && \
            sha256sum *.apk >>../SHA256SUMS && \
-           for f in *.apk; do mv $f ../$(echo $f | sed 's/\-r0.apk$//').$(uname -m).apk; done)
+           for f in *.apk; do mv $f ../$(echo $f | sed 's/\-r0.apk$//').$ARCH.apk; done)
+          rmdir "dist/$ARCH/"
       - name: Download krmfnbuiltin apk
         run: |
           cd dist
