--- a/pkg/provision/base/kustomization.yaml
+++ b/pkg/provision/base/kustomization.yaml
@@ -20,6 +20,46 @@ patches:
     target:
       kind: StorageClass
       name: local-path
+  # This patch is to fix the busybox image pull issue in air-gapped environments
+  - patch: |-
+      - op: replace
+        path: /data
+        value: |
+          config.json: |-
+            {
+                    "nodePathMap":[
+                    {
+                            "node":"DEFAULT_PATH_FOR_NON_LISTED_NODES",
+                            "paths":["/opt/local-path-provisioner"]
+                    }
+                    ]
+            }
+          helperPod.yaml: |-
+            apiVersion: v1
+            kind: Pod
+            metadata:
+              name: helper-pod
+            spec:
+              priorityClassName: system-node-critical
+              tolerations:
+                - key: node.kubernetes.io/disk-pressure
+                  operator: Exists
+                  effect: NoSchedule
+              containers:
+              - name: helper-pod
+                image: busybox:1.37.0
+                imagePullPolicy: IfNotPresent
+          setup: |-
+            #!/bin/sh
+            set -eu
+            mkdir -m 0777 -p "$VOL_DIR"
+          teardown: |-
+            #!/bin/sh
+            set -eu
+            rm -rf "$VOL_DIR"
+    target:
+      kind: ConfigMap
+      name: local-path-config
   - patch: |-
       - op: add
         path: /spec/template/spec/containers/0/args/-
